# alchemiscale-k8s

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
compute/: compute-services.yaml  synchronous-compute-settings.yaml
deployment/compute/: secrets.sh  synchronous-compute-settings.yaml
deployment/server/: alchemiscale-ingress.yaml  alchemiscale-namespace.yaml  computeapi-deployment.yaml  debugger-pod.yaml  neo4j-statefulset.yaml
devtools/conda-envs/: test.yml
pkg/: LICENSE  README.md  conda-env.yaml  pyproject.toml
pkg/src/alchemiscale_k8s/: cli.py  manager.py  settings.py
pkg/src/alchemiscale_k8s/tests/: test_compute_manager.py  test_settings.py
pkg/src/alchemiscalek8s/: cli.py  manager.py  settings.py
server/: alchemiscale-configmap.yaml  alchemiscale_ingress.yaml  clientapi-deployment.yaml  clientapi_deployment.yaml  computeapi_deployment.yaml  debugger_pod.yaml  neo4j_statefulset.yaml  secrets.sh
